--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react-table@latest/react-table.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
+
 
   <title>Employees</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <h1>Please select one of the provided mock files.</h1>
-  <input type="file" id="file-input">
 </body>
 
 </html>
